<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/heathens_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <ImageView
        android:id="@+id/home_button_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/button_arrow_home"
        android:src="@drawable/ic_keyboard_arrow_down_white_48dp"/>

    <TextView
        android:id="@+id/artist_name_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_button_song"
        android:background="#000000"
        android:text="@string/artist_name_1"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artist_name_song"
        android:layout_marginTop="8dp"
        android:background="#000000"
        android:text="@string/song_name_1"
        android:textColor="@android:color/white"
        android:textSize="28sp"/>

    <LinearLayout
        android:id="@+id/control_ll_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_previous"
            android:src="@drawable/ic_skip_previous_black_48dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_play"
            android:src="@drawable/ic_play_arrow_black_48dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/button_next"
            android:src="@drawable/ic_skip_next_black_48dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/song_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/control_ll_song"
        android:layout_marginTop="16dp"
        android:background="#99000000"
        android:text="@string/song"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/song_screen"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="#99000000"
        android:text="@string/plan_song"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/button_like"
        android:padding="20dp"
        android:src="@drawable/ic_favorite_border_black_36dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/button_unlike"
        android:padding="20dp"
        android:src="@drawable/ic_not_interested_black_36dp"/>

</RelativeLayout>
